# rust-discord-bot

./: .gitignore  Cargo.toml  Notes.md  README.md  build.rs  t.sql
src/: database.rs  main.rs
src/commands/: mod.rs  ping.rs  setup.rs
test/--serenity/: Cargo.toml
