[package]
name = "rust-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {  default-features = false, features = ["client", "gateway", "rustls_backend", "cache", "model"], version = "0.11" }
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
